# ChangeLog for sys-apps/fwcrv
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/fwcrv/ChangeLog,v 1.5 2007/02/22 01:09:33 jokey Exp $

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  22 Mar 2006; Luca Barbato <lu_zero@gentoo.org>
  +files/fwcrv-0.1.0-endian.patch, fwcrv-0.1.0.ebuild:
  Fixed for big endian and char sign/unsign arches.

  26 Sep 2005; Robin H. Johnson <robbat2@gentoo.org> fwcrv-0.1.0.ebuild:
  Stable on x86, 260 days in ~x86.

  17 Sep 2005; Ciaran McCreesh <ciaranm@gentoo.org> ChangeLog:
  Converted to UTF-8, fixed encoding screwups

*fwcrv-0.1.0 (09 Jan 2005)

  09 Jan 2005; Robin H. Johnson <robbat2@gentoo.org> +metadata.xml,
  +fwcrv-0.1.0.ebuild:
  Inital submission. Ebuild submitted by Holger Hoffstätte <holger@wizards.de>.
