@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/fwcrv
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/fwcrv/ChangeLog,v 1.5 2007/02/22 01:09:33 jokey Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/fwcrv/ChangeLog,v 1.6 2008/01/14 02:34:51 robbat2 Exp $
+
+  14 Jan 2008; Robin H. Johnson <robbat2@gentoo.org> metadata.xml,
+  fwcrv-0.1.0.ebuild:
+  Update metadata, clean ebuild.
 
   22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
   Redigest for Manifest2
